--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,44 @@
     -->
     <title>React App</title>
   </head>
+  <style>
+    .lside {
+      margin: 1%;
+      padding: 1%;
+      background: blue;
+      width: 50%;
+      height: 90%;
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      /* overflow: scroll; */
+    }
+
+    .rside {
+      margin: 1%;
+      padding: 1%;
+      background: red;
+      width: 50%;
+      height: 90%;
+      position: absolute;
+      top: 0%;
+      right: 0%;
+      /* overflow: scroll; */
+    }
+    .nav {
+      /* margin: 1%; */
+      padding: 1%;
+      /* border-width: 0.5%; */
+      width: 98%;
+      height: 5%;
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      box-shadow: 0 3px 21px 3px #333;
+      z-index: 999;
+    }
+  </style>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
