--- a/public/index.html
+++ b/public/index.html
@@ -25,33 +25,21 @@
     <title>React App</title>
   </head>
   <style>
-    .lside {
+    .outside {
       margin: 1%;
       padding: 1%;
-      background: blue;
-      width: 50%;
-      height: 90%;
+      background-image: linear-gradient(to right, red 50%, blue 50%);
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      width: 96%;
+      height: 92%;
       position: absolute;
       top: 0%;
       left: 0%;
-      /* overflow: scroll; */
     }
 
-    .rside {
-      margin: 1%;
-      padding: 1%;
-      background: red;
-      width: 50%;
-      height: 90%;
-      position: absolute;
-      top: 0%;
-      right: 0%;
-      /* overflow: scroll; */
-    }
     .nav {
-      /* margin: 1%; */
       padding: 1%;
-      /* border-width: 0.5%; */
       width: 98%;
       height: 5%;
       position: absolute;
@@ -59,6 +47,64 @@
       left: 0%;
       box-shadow: 0 3px 21px 3px #333;
       z-index: 999;
+    }
+    .timerBox {
+      margin: 1%;
+      padding: 1%;
+      border-style: solid;
+      border-color: black;
+      background-image: linear-gradient(to right, red 50%, blue 50%);
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      width: 40%;
+      height: 15%;
+      position: absolute;
+      top: 10%;
+      left: 29%;
+      /* overflow: scroll; */
+    }
+
+    .leftTopBox {
+      margin: 1%;
+      padding: 1%;
+      border-style: solid;
+      border-color: black;
+      background-image: linear-gradient(to right, red 50%, blue 50%);
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      width: 40%;
+      height: 29%;
+      position: absolute;
+      top: 31%;
+      left: 0%;
+    }
+    .rightTopBox {
+      margin: 1%;
+      padding: 1%;
+      border-style: solid;
+      border-color: black;
+      background-image: linear-gradient(to right, red 50%, blue 50%);
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      width: 40%;
+      height: 29%;
+      position: absolute;
+      top: 31%;
+      right: 0%;
+    }
+    .BottomBox {
+      margin: 1%;
+      padding: 1%;
+      border-style: solid;
+      border-color: black;
+      background-image: linear-gradient(to right, red 50%, blue 50%);
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      width: 96%;
+      height: 20%;
+      position: absolute;
+      bottom: 1%;
+      right: 0%;
     }
   </style>
 
