--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <title>React App</title>
   </head>
   <style>
-    .lside {
+    /* .lside {
       margin: 1%;
       padding: 1%;
       background: blue;
@@ -47,7 +47,7 @@
       top: 0%;
       right: 0%;
       /* overflow: scroll; */
-    }
+    } */
     .nav {
       /* margin: 1%; */
       padding: 1%;
