--- a/public/index.html
+++ b/public/index.html
@@ -36,23 +36,26 @@
       position: absolute;
       top: 0%;
       left: 0%;
+      display: flex;
     }
 
     .nav {
-      padding: 1%;
+      display: flex;
+      /* padding: 1%; */
       width: 98%;
       height: 5%;
       position: absolute;
       top: 0%;
       left: 0%;
-      box-shadow: 0 3px 21px 3px #333;
+      /* box-shadow: 0 3px 21px 3px #333; */
       z-index: 999;
+      justify-content: center;
+      font-size: 25px;
     }
     .timerBox {
       margin: 1%;
       padding: 1%;
-      border-style: solid;
-      border-color: black;
+      border: solid 2px black;
       background-image: linear-gradient(to right, red 50%, blue 50%);
       background-attachment: fixed;
       background-repeat: no-repeat;
@@ -65,6 +68,7 @@
     }
 
     .leftTopBox {
+      display: flex;
       margin: 1%;
       padding: 1%;
       border-style: solid;
@@ -77,8 +81,11 @@
       position: absolute;
       top: 31%;
       left: 0%;
+      font-size: 70px;
+      justify-content: center;
     }
     .rightTopBox {
+      display: flex;
       margin: 1%;
       padding: 1%;
       border-style: solid;
@@ -89,10 +96,13 @@
       width: 40%;
       height: 29%;
       position: absolute;
+      font-size: 70px;
       top: 31%;
       right: 0%;
+      justify-content: center;
     }
     .BottomBox {
+      display: flex;
       margin: 1%;
       padding: 1%;
       border-style: solid;
@@ -105,6 +115,8 @@
       position: absolute;
       bottom: 1%;
       right: 0%;
+      font-size: 50px;
+      justify-content: center;
     }
   </style>
 
